<resources>
    <string name="app_name">Pendaftaranv2</string>
    <string name="labelapp">PENDAFTARAN</string>
    <string name="nd">Nama Depan</string>
    <string name="nb">Nama Belakang</string>
    <string name="tl">Tempat Lahir</string>
    <string name="tg">Tanggal Lahir</string>
    <string name="al">Alamat</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="l">Laki-Laki</string>
    <string name="p">Perempuan</string>
    <string name="ag">Agama</string>
    <string name="Is">Islam</string>
    <string name="kt">Katolik</string>
    <string name="kr">Kristen</string>
    <string name="bd">Budha</string>
    <string name="hd">Hindu</string>
    <string name="kc">Konghucu</string>
    <string name="ak">Aliran Kepercayaan</string>
    <string name="tp">Telpon</string>
    <string name="em">Email</string>
    <string name="Ps">Password</string>
    <string name="mp">Masukan Password Kembali</string>
    <string name="kb">KEMBALI</string>
    <string name="df">DAFTAR</string>
    <string name="date_picker">datePicker</string>
</resources>
