<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/labelapp"
                android:textAlignment="center"
                android:textColor="@color/judul"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/namadepan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nd"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorAccent" />
                    <EditText
                        android:id="@+id/namabelakang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nb"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorAccent" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/tempatlahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tl"
                        android:textColor="@color/colorAccent" />

                    <EditText
                        android:id="@+id/tanggallahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tg"
                        android:inputType="datetime"
                        android:textColor="@color/colorAccent" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/alam"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:hint="@string/al"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/jk"
                android:textColor="@color/judul"
                android:textSize="15sp"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/l"
                        android:ems="10"/>
                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/p"
                        android:ems="10"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ag"
                android:textColor="@color/judul"
                android:textSize="15sp"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Is"
                        android:ems="10"/>
                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kr"
                        android:ems="10"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kt"
                        android:ems="10"/>
                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hd"
                        android:ems="10"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bd"
                        android:ems="10"/>
                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kc"
                        android:ems="10"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ak"
                        android:ems="10"/>
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/tlp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/tp"
                android:inputType="phone"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/eml"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/em"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/Ps"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />

<!--            <cyd.awesome.material.AwesomeText-->
<!--                android:id="@+id/ImgShowPassword"-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:gravity="center"-->
<!--                android:textColor="#ff0000"-->
<!--                app:awesome_font="material_design"-->
<!--                app:awesome_icon="MD_VISIBILITY_OFF" />-->

            <EditText
                android:id="@+id/masukan"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/mp"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/kmbl"
                            android:layout_width="150dp"
                            android:layout_height="49dp"
                            android:layout_gravity="right"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="0dp"
                            android:background="@color/btn"
                            android:text="@string/kb" />

                        <Button
                            android:id="@+id/dftr"
                            android:layout_width="150dp"
                            android:layout_height="49dp"
                            android:layout_gravity="right"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="0dp"
                            android:background="@color/btn"
                            android:text="@string/df" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>